// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar  default avatar snapshot 1`] = `
<WithStyles(HvAvatar)>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG",
        "MD": "HvAvatar-MD",
        "SM": "HvAvatar-SM",
        "XL": "HvAvatar-XL",
        "XS": "HvAvatar-XS",
        "avatar": "HvAvatar-avatar",
        "badge": "HvAvatar-badge",
        "circular": "HvAvatar-circular",
        "container": "HvAvatar-container",
        "fallback": "HvAvatar-fallback",
        "img": "HvAvatar-img",
        "root": "HvAvatar-root",
        "status": "HvAvatar-status",
      }
    }
  >
    <div
      className="HvAvatar-container"
    >
      <div
        className="HvAvatar-status HvAvatar-circular HvAvatar-SM"
        style={Object {}}
      >
        <WithStyles(ForwardRef(Avatar))
          className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
          style={
            Object {
              "backgroundColor": "#414141",
              "color": "#FBFCFC",
            }
          }
          variant="circular"
        >
          <ForwardRef(Avatar)
            className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
            classes={
              Object {
                "circle": "MuiAvatar-circle",
                "circular": "MuiAvatar-circular",
                "colorDefault": "MuiAvatar-colorDefault",
                "fallback": "MuiAvatar-fallback",
                "img": "MuiAvatar-img",
                "root": "MuiAvatar-root",
                "rounded": "MuiAvatar-rounded",
                "square": "MuiAvatar-square",
              }
            }
            style={
              Object {
                "backgroundColor": "#414141",
                "color": "#FBFCFC",
              }
            }
            variant="circular"
          >
            <div
              className="MuiAvatar-root MuiAvatar-circular HvAvatar-root HvAvatar-avatar HvAvatar-SM MuiAvatar-colorDefault"
              style={
                Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                }
              }
            >
              <User
                className="HvAvatar-fallback"
                color="atmo1"
                iconSize="XS"
              >
                <HvIconBase
                  className="HvAvatar-fallback"
                  iconSize="XS"
                  name="User"
                >
                  <div
                    className="HvAvatar-fallback HvIconBase-root HvIconBase-xs"
                    name="User"
                  >
                    <svg
                      focusable={false}
                      height={12}
                      viewBox="0 0 16 16"
                      width={12}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        className="color0"
                        d="M9.6 8.7A4.49656 4.49656 0 008.03809 0Q8.019-.00007 8 0a4.481 4.481 0 00-4.5 4.46194q-.00009.019 0 .03808A4.563 4.563 0 006.4 8.7 7.687 7.687 0 00.5 16h1a6.487 6.487 0 016.474-6.5H8a6.487 6.487 0 016.5 6.474V16h1a7.493 7.493 0 00-5.9-7.3zM4.5 4.5A3.543 3.543 0 018 1a3.543 3.543 0 013.5 3.5A3.543 3.543 0 018 8a3.543 3.543 0 01-3.5-3.5z"
                        fill="#FBFCFC"
                      />
                    </svg>
                  </div>
                </HvIconBase>
              </User>
            </div>
          </ForwardRef(Avatar)>
        </WithStyles(ForwardRef(Avatar))>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;

exports[`Avatar  icon avatar snapshot 1`] = `
<WithStyles(HvAvatar)>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG",
        "MD": "HvAvatar-MD",
        "SM": "HvAvatar-SM",
        "XL": "HvAvatar-XL",
        "XS": "HvAvatar-XS",
        "avatar": "HvAvatar-avatar",
        "badge": "HvAvatar-badge",
        "circular": "HvAvatar-circular",
        "container": "HvAvatar-container",
        "fallback": "HvAvatar-fallback",
        "img": "HvAvatar-img",
        "root": "HvAvatar-root",
        "status": "HvAvatar-status",
      }
    }
  >
    <div
      className="HvAvatar-container"
    >
      <div
        className="HvAvatar-status HvAvatar-circular HvAvatar-SM"
        style={Object {}}
      >
        <WithStyles(ForwardRef(Avatar))
          className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
          style={
            Object {
              "backgroundColor": "#414141",
              "color": "#FBFCFC",
            }
          }
          variant="circular"
        >
          <ForwardRef(Avatar)
            className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
            classes={
              Object {
                "circle": "MuiAvatar-circle",
                "circular": "MuiAvatar-circular",
                "colorDefault": "MuiAvatar-colorDefault",
                "fallback": "MuiAvatar-fallback",
                "img": "MuiAvatar-img",
                "root": "MuiAvatar-root",
                "rounded": "MuiAvatar-rounded",
                "square": "MuiAvatar-square",
              }
            }
            style={
              Object {
                "backgroundColor": "#414141",
                "color": "#FBFCFC",
              }
            }
            variant="circular"
          >
            <div
              className="MuiAvatar-root MuiAvatar-circular HvAvatar-root HvAvatar-avatar HvAvatar-SM MuiAvatar-colorDefault"
              style={
                Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                }
              }
            >
              <LogIn
                iconSize="XS"
              >
                <HvIconBase
                  iconSize="XS"
                  name="LogIn"
                >
                  <div
                    className="HvIconBase-root HvIconBase-xs"
                    name="LogIn"
                  >
                    <svg
                      focusable={false}
                      height={12}
                      viewBox="0 0 16 16"
                      width={12}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        className="color0"
                        d="M16 16H6v-1h9V1H6V0h10zm-7.69995-4.5L9 12.2 13.2 8 9 3.8l-.69995.7 3 3H1v1h10.30005z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </HvIconBase>
              </LogIn>
            </div>
          </ForwardRef(Avatar)>
        </WithStyles(ForwardRef(Avatar))>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;

exports[`Avatar  image avatar snapshot 1`] = `
<WithStyles(HvAvatar)
  imgProps={
    Object {
      "onError": [Function],
      "other": "my value",
    }
  }
  src="something.jpg"
>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG",
        "MD": "HvAvatar-MD",
        "SM": "HvAvatar-SM",
        "XL": "HvAvatar-XL",
        "XS": "HvAvatar-XS",
        "avatar": "HvAvatar-avatar",
        "badge": "HvAvatar-badge",
        "circular": "HvAvatar-circular",
        "container": "HvAvatar-container",
        "fallback": "HvAvatar-fallback",
        "img": "HvAvatar-img",
        "root": "HvAvatar-root",
        "status": "HvAvatar-status",
      }
    }
    imgProps={
      Object {
        "onError": [Function],
        "other": "my value",
      }
    }
    src="something.jpg"
  >
    <div
      className="HvAvatar-container"
    >
      <div
        className="HvAvatar-status HvAvatar-circular HvAvatar-SM"
        style={Object {}}
      >
        <WithStyles(ForwardRef(Avatar))
          className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
          style={Object {}}
          variant="circular"
        >
          <ForwardRef(Avatar)
            className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
            classes={
              Object {
                "circle": "MuiAvatar-circle",
                "circular": "MuiAvatar-circular",
                "colorDefault": "MuiAvatar-colorDefault",
                "fallback": "MuiAvatar-fallback",
                "img": "MuiAvatar-img",
                "root": "MuiAvatar-root",
                "rounded": "MuiAvatar-rounded",
                "square": "MuiAvatar-square",
              }
            }
            style={Object {}}
            variant="circular"
          >
            <div
              className="MuiAvatar-root MuiAvatar-circular HvAvatar-root HvAvatar-avatar HvAvatar-SM MuiAvatar-colorDefault"
              style={Object {}}
            >
              <img
                className="HvAvatar-img"
                onError={[Function]}
                other="my value"
                src="something.jpg"
              />
            </div>
          </ForwardRef(Avatar)>
        </WithStyles(ForwardRef(Avatar))>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;

exports[`Avatar  letter avatar snapshot 1`] = `
<WithStyles(HvAvatar)>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG",
        "MD": "HvAvatar-MD",
        "SM": "HvAvatar-SM",
        "XL": "HvAvatar-XL",
        "XS": "HvAvatar-XS",
        "avatar": "HvAvatar-avatar",
        "badge": "HvAvatar-badge",
        "circular": "HvAvatar-circular",
        "container": "HvAvatar-container",
        "fallback": "HvAvatar-fallback",
        "img": "HvAvatar-img",
        "root": "HvAvatar-root",
        "status": "HvAvatar-status",
      }
    }
  >
    <div
      className="HvAvatar-container"
    >
      <div
        className="HvAvatar-status HvAvatar-circular HvAvatar-SM"
        style={Object {}}
      >
        <WithStyles(ForwardRef(Avatar))
          className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
          style={
            Object {
              "backgroundColor": "#414141",
              "color": "#FBFCFC",
            }
          }
          variant="circular"
        >
          <ForwardRef(Avatar)
            className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
            classes={
              Object {
                "circle": "MuiAvatar-circle",
                "circular": "MuiAvatar-circular",
                "colorDefault": "MuiAvatar-colorDefault",
                "fallback": "MuiAvatar-fallback",
                "img": "MuiAvatar-img",
                "root": "MuiAvatar-root",
                "rounded": "MuiAvatar-rounded",
                "square": "MuiAvatar-square",
              }
            }
            style={
              Object {
                "backgroundColor": "#414141",
                "color": "#FBFCFC",
              }
            }
            variant="circular"
          >
            <div
              className="MuiAvatar-root MuiAvatar-circular HvAvatar-root HvAvatar-avatar HvAvatar-SM MuiAvatar-colorDefault"
              style={
                Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                }
              }
            >
              OT
            </div>
          </ForwardRef(Avatar)>
        </WithStyles(ForwardRef(Avatar))>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;
